--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 .container {
     background-color: #ffffff;
     padding: 40px;
+    margin-top: 10px;
     border-radius: 10px;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
     text-align: center;
